--- a/PlagueInc/PlagueInc/PlagueInc.csproj
+++ b/PlagueInc/PlagueInc/PlagueInc.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileReader.cs" />
     <Compile Include="Graph.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
