--- a/PlagueInc/PlagueInc/PlagueInc.csproj
+++ b/PlagueInc/PlagueInc/PlagueInc.csproj
@@ -57,11 +57,11 @@
   <ItemGroup>
     <Compile Include="FileReader.cs" />
     <Compile Include="Graph.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Frontend.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Frontend.Designer.cs">
+      <DependentUpon>Frontend.cs</DependentUpon>
     </Compile>
     <Compile Include="GraphConverter.cs" />
     <Compile Include="Program.cs" />
